Génération des éléments de la galerie (Factory Method)

--- a/index.html
+++ b/index.html
@@ -43,98 +43,11 @@
 
             <main class="acc-main">
                 <h1>Nos Photographes</h1>
-                
-                <section>
-                    <!-- <div aria-label="Fiche du photographe" class="fiche-acc">
-                        <a aria-label="Page de Mimi Keel" class="fiche-acc__lien" href="photographe.html">
-                            <img class="img-fiche" src="./images/id_photos/MimiKeel.jpg" alt="" />
-                            <h2>Mimi Keel</h2>
-                        </a>
-                        <p class="fiche-acc__lieu">London, UK</p>
-                        <p class="fiche-acc__citation">Voir le beau dans le quotidien</p>
-                        <p class="fiche-acc__prix">400€/jour</p>
-                        <ul class="fiche-acc__liste">
-                            <li><a href="#">#Portrait</a></li>
-                            <li><a href="#">#Travel</a></li>
-                            <li><a href="#">#Animals</a></li>
-                            <li><a href="#">#Events</a></li>
-                        </ul>
-                    </div>
-                    <div aria-label="Fiche du photographe" class="fiche-acc">
-                        <a aria-label="Page de Ellie-Rose Wilkens" class="fiche-acc__lien" href="#">
-                            <img class="img-fiche" src="./images/id_photos/EllieRoseWilkens.jpg" alt="" />
-                            <h2>Ellie-Rose Wilkens</h2>
-                        </a>
-                        <p class="fiche-acc__lieu">Paris, France</p>
-                        <p class="fiche-acc__citation">Capturer des compositions complexes</p>
-                        <p class="fiche-acc__prix">250€/jour</p>
-                        <ul class="fiche-acc__liste">
-                            <li><a href="#">#Sport</a></li>
-                            <li><a href="#">#Architecture</a></li>
-                        </ul>
-                    </div>
-                    <div aria-label="Fiche du photographe" class="fiche-acc">
-                        <a aria-label="Page de Tracy Galindo" class="fiche-acc__lien" href="#">
-                            <img class="img-fiche" src="./images/id_photos/TracyGalindo.jpg" alt="" />
-                            <h2>Tracy Galindo</h2>
-                        </a>
-                        <p class="fiche-acc__lieu">Montreal, Canada</p>
-                        <p class="fiche-acc__citation">Photographe freelance</p>
-                        <p class="fiche-acc__prix">350€/jour</p>
-                        <ul class="fiche-acc__liste">
-                            <li><a href="#">#Art</a></li>
-                            <li><a href="#">#Fashion</a></li>
-                            <li><a href="#">#Events</a></li>
-                        </ul>
-                    </div>
-                    <div aria-label="Fiche du photographe" class="fiche-acc">
-                        <a aria-label="Page de Nabeel Bradford" class="fiche-acc__lien" href="#">
-                            <img class="img-fiche" src="./images/id_photos/NabeelBradford.jpg" alt="" />
-                            <h2>Nabeel Bradford</h2>
-                        </a>
-                        <p class="fiche-acc__lieu">Mexico City, Mexico</p>
-                        <p class="fiche-acc__citation">Toujours aller de l'avant</p>
-                        <p class="fiche-acc__prix">500€/jour</p>
-                        <ul class="fiche-acc__liste">
-                            <li><a href="#">#Portrait</a></li>
-                            <li><a href="#">#Travel</a></li>
-                        </ul>
-                    </div>
-                    <div aria-label="Fiche du photographe" class="fiche-acc">
-                        <a aria-label="Page de Rhode Dubois" class="fiche-acc__lien" href="#">
-                            <img class="img-fiche" src="./images/id_photos/RhodeDubois.jpg" alt="" />
-                            <h2>Rhode Dubois</h2>
-                        </a>
-                        <p class="fiche-acc__lieu">Barcelona, Spain</p>
-                        <p class="fiche-acc__citation">Je crée des souvenirs</p>
-                        <p class="fiche-acc__prix">275€/jour</p>
-                        <ul class="fiche-acc__liste">
-                            <li><a href="#">#Sport</a></li>
-                            <li><a href="#">#Fashion</a></li>
-                            <li><a href="#">#Animals</a></li>
-                            <li><a href="#">#Events</a></li>
-                        </ul>
-                    </div>
-                    <div aria-label="Fiche du photographe" class="fiche-acc">
-                        <a aria-label="Page de Marcel Nikolic" class="fiche-acc__lien" href="#">
-                            <img class="img-fiche" src="./images/id_photos/MarcelNikolic.jpg" alt="" />
-                            <h2>Marcel Nikolic</h2>
-                        </a>
-                        <p class="fiche-acc__lieu">Berlin, Germany</p>
-                        <p class="fiche-acc__citation">Toujours à la recherche de LA photo</p>
-                        <p class="fiche-acc__prix">400€/jour</p>
-                        <ul class="fiche-acc__liste">
-                            <li><a href="#">#Travel</a></li>
-                            <li><a href="#">#Architecture</a></li>
-                        </ul>
-                    </div> -->
-                </section>
-                
+                <section></section>
             </main>
 
         </div>
+    <script src="fiche-acc.js"></script>
     </body>
-    <script type="text/javascript" src="variables.js"></script>
-    <script type="text/javascript" src="fiche-acc.js"></script>
 
 </html>
