Filtrage selon l'étiquette (2 pages)

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 </a>
                 <nav aria-label="Catégories de photographes">
                     <ul class="header__liste">
-                        <li><a href="#">#Portrait</a></li>
-                        <li><a href="#">#Art</a></li>
-                        <li><a href="#">#Fashion</a></li>
-                        <li><a href="#">#Architecture</a></li>
-                        <li><a href="#">#Travel</a></li>
-                        <li><a href="#">#Sport</a></li>
-                        <li><a href="#">#Animals</a></li>
-                        <li><a href="#">#Events</a></li>
+                        <li><a href="#">#portrait</a></li>
+                        <li><a href="#">#art</a></li>
+                        <li><a href="#">#fashion</a></li>
+                        <li><a href="#">#architecture</a></li>
+                        <li><a href="#">#travel</a></li>
+                        <li><a href="#">#sport</a></li>
+                        <li><a href="#">#animals</a></li>
+                        <li><a href="#">#events</a></li>
                     </ul>
                 </nav>
             </header>
