Filtrage selon le menu et ajout de l'affichage dynamique du carrousel

--- a/photographe.html
+++ b/photographe.html
@@ -50,7 +50,7 @@
 
                 <section class="galerie">
                     <div class="galerie-tri">Trier par
-                        <button class="btn btn--galerie" aria-label="Ouvre le menu de tri" aria-haspopup="true">Popularité</button>
+                        <button class="btn btn--galerie" aria-label="Ouvre le menu de tri" aria-haspopup="true" aria-expanded="false">Popularité</button>
                         <ul class="menu-liste">
                             <li>Popularité</li>
                             <li>Date</li>
@@ -94,7 +94,7 @@
                             <figure></figure>
                             <button class="btn-chvr btn-chvr--gau"><i id="chvr-gau" class="fas fa-chevron-left fa-4x"></i></button>
                             <button class="btn-chvr btn-chvr--dro"><i id="chvr-dro" class="fas fa-chevron-right fa-4x"></i></button>
-                            <button class="btn-ferme--carous"></button>
+                            <button class="btn-ferme--carrou"></button>
                         </li>
                     </ul>
                 </div>
