Amélioration globale de l'accessibilité

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <header class="header" role="banner">
                 <a aria-label="FishEye - Page d'accueil" href="index.html">
-                    <svg role=img width="200" height="50" viewBox="0 0 200 50" fill="none" xmlns="http://www.w3.org/2000/svg" aria-describedby="titre description">
+                    <svg role="img" width="200" height="50" viewBox="0 0 200 50" fill="none" xmlns="http://www.w3.org/2000/svg" aria-describedby="titre description">
                         <title id="titre">FishEye</title>
                         <desc id="description">Le logo de FishEye</desc>
                         <path d="M24.7206 0.911377V6.51034H6.31164V17.578H21.4333V22.9166H6.31164V39.1926H0V0.911377H24.7206Z" fill="#911C1C"/>
@@ -29,25 +29,26 @@
                 </a>
                 <nav aria-label="Catégories de photographes">
                     <ul class="header__liste">
-                        <li><a href="#">#portrait</a></li>
-                        <li><a href="#">#art</a></li>
-                        <li><a href="#">#fashion</a></li>
-                        <li><a href="#">#architecture</a></li>
-                        <li><a href="#">#travel</a></li>
-                        <li><a href="#">#sport</a></li>
-                        <li><a href="#">#animals</a></li>
-                        <li><a href="#">#events</a></li>
+                        <li><a href="#acc-sct">#Portrait</a></li>
+                        <li><a href="#acc-sct">#Art</a></li>
+                        <li><a href="#acc-sct">#Fashion</a></li>
+                        <li><a href="#acc-sct">#Architecture</a></li>
+                        <li><a href="#acc-sct">#Travel</a></li>
+                        <li><a href="#acc-sct">#Sport</a></li>
+                        <li><a href="#acc-sct">#Animals</a></li>
+                        <li><a href="#acc-sct">#Events</a></li>
                     </ul>
                 </nav>
             </header>
 
             <main class="acc-main">
                 <h1>Nos Photographes</h1>
-                <section></section>
+                <section id="acc-sct"></section>
             </main>
 
         </div>
-    <script src="fiche-acc.js"></script>
+        
+    <script src="page-acc.js"></script>
     </body>
 
 </html>
